--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* height: 100%; */
 }
+
+/* html { */
+  /* height: 100%; */
+  /* background-color: '#212121'; */
+/* } */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -23,4 +29,26 @@ code {
 .preview {
   max-width: 100%;
   height: auto;
+}
+
+.listselector {
+  background: 'none';
+  color: '#FFF';
+  padding: '0 1.15em';
+  margin: '0 0.65em';
+  min-width: '3em';
+  line-height: '36.4px';
+  border: 'none';
+  border-radius: '8px';
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
